Thesis report progress

--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -90,6 +90,22 @@ GSCC: 0000199 2025-12-23T15:13:06.100Z 0.61}
   keywords = {Multimodal}
 }
 
+@misc{chenGOATSLMSpokenLanguage2025,
+  title = {{{GOAT-SLM}}: {{A Spoken Language Model}} with {{Paralinguistic}} and {{Speaker Characteristic Awareness}}},
+  shorttitle = {{{GOAT-SLM}}},
+  author = {Chen, Hongjie and Li, Zehan and Song, Yaodong and Deng, Wenming and Yao, Yitong and Zhang, Yuxin and Lv, Hang and Zhu, Xuechao and Kang, Jian and Lian, Jie and Li, Jie and Wang, Chao and Song, Shuangyong and Li, Yongxiang and He, Zhongjiang and Li, Xuelong},
+  year = 2025,
+  month = jul,
+  number = {arXiv:2507.18119},
+  eprint = {2507.18119},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2507.18119},
+  abstract = {Recent advances in end-to-end spoken language models (SLMs) have significantly improved the ability of AI systems to engage in natural spoken interactions. However, most existing models treat speech merely as a vehicle for linguistic content, often overlooking the rich paralinguistic and speaker characteristic cues embedded in human speech, such as dialect, age, emotion, and non-speech vocalizations. In this work, we introduce GOAT-SLM, a novel spoken language model with paralinguistic and speaker characteristic awareness, designed to extend spoken language modeling beyond text semantics. GOAT-SLM adopts a dual-modality head architecture that decouples linguistic modeling from acoustic realization, enabling robust language understanding while supporting expressive and adaptive speech generation. To enhance model efficiency and versatility, we propose a modular, staged training strategy that progressively aligns linguistic, paralinguistic, and speaker characteristic information using large-scale speech-text corpora. Experimental results on TELEVAL, a multi-dimensional evaluation benchmark, demonstrate that GOAT-SLM achieves well-balanced performance across both semantic and non-semantic tasks, and outperforms existing open-source models in handling emotion, dialectal variation, and age-sensitive interactions. This work highlights the importance of modeling beyond linguistic content and advances the development of more natural, adaptive, and socially aware spoken language systems.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing}
+}
+
 @misc{devlinBERTPretrainingDeep2019,
   title = {{{BERT}}: {{Pre-training}} of {{Deep Bidirectional Transformers}} for {{Language Understanding}}},
   shorttitle = {{{BERT}}},
